index sm about responsive finish

--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -117,13 +117,13 @@
                     color: #ffff !important;
                     border-color: #ffff !important;
                 }
+                /* LOGO */
                 .h-100 {
                     width: 50%;
                 }
             }
             @media (min-width: 310px) and (max-width: 469px) {
                 /* FOOTER */
-
                 .footer-item h4 {
                     /* border: 2px solid red; */
                     font-size: 16px; /* Mengecilkan ukuran heading */
@@ -168,14 +168,12 @@
                     margin-left: 22px !important;
                     color: #ffff !important;
                 }
-
                 .navbar-toggler  {
                     font-size: 15px;
                     padding: 0.3rem 0.6rem !important; 
                     color: #ffff !important;
                     border-color: #ffff !important;
                 }
-                
                 .collapse {
                     font-size: 20px;
                 }
@@ -291,7 +289,6 @@
                     margin-left: 25px !important;
                     color: #ffff !important;
                 }
-
                 .navbar-toggler  {
                     font-size: 15px;
                     padding: 0.3rem 0.6rem !important; 
@@ -804,7 +801,7 @@
                 }
             }
 
-            @media  (min-width: 1441px) {
+            @media  (min-width: 2560px) {
                 /* NAVBAR */
                 .navbar {
                     height: 180px;
