--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -43,13 +43,16 @@
             .navbar-brand .m-0 {
                 font-size: 28px;
             }
+            .subtext{
+                margin: 0px;
+            }
+            .kec {
+                margin-left: 6px;
+            }
             @media (max-width: 992px) {
 
                 .navbar-brand .fa {
                     font-size: 25px !important;
-                }
-                .navbar-brand .subtext {
-                    margin-left: 35px !important;
                 }
                 .navbar-toggler.scrolled {
                     color: #13357b !important;
@@ -143,7 +146,7 @@
                 }
                 .navbar-brand h1 .subtext {
                     font-size: 15px !important;
-                    margin-left: 32px !important;
+                    margin: 0px !important;
                     color: #ffff !important;
                 }
 
@@ -190,7 +193,7 @@
                 }
                 .navbar-brand h1 .subtext {
                     font-size: 15px !important;
-                    margin-left: 30px !important;
+                    margin: 0px !important;
                     color: #ffff !important;
                 }
 
@@ -252,8 +255,11 @@
             }
 
             @media (min-width: 381px) and (max-width: 426px) {
+                .navbar-brand .fa {
+                    margin-right: 13px !important;
+                }
                 .navbar-brand h1 .subtext {
-                    margin-left: 31px !important;
+                    margin: 0px !important;
                 }
                 .nav.nav-pills {
                     /* justify-content: flex-start;
@@ -281,7 +287,7 @@
                 }
                 .navbar-brand .subtext {
                     font-size: 18px;
-                    margin-left: 31px;
+                    margin: 0px !important;
                 }
                 .navbar-brand .fa {
                     font-size: 20px !important;
@@ -349,7 +355,16 @@
             }
 
             @media (min-width: 551) and (max-width: 770px){
-                
+                .navbar-brand .m-0 {
+                    font-size: 23px;
+                }
+                .navbar-brand .subtext {
+                    font-size: 18px;
+                    margin: 0px !important;
+                }
+                .navbar-brand .fa {
+                    font-size: 20px !important;
+                }
                  /* SEARCH */
                  .container-fluid.w-100.search-bar {
                     width: 400px !important;
@@ -566,9 +581,11 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Kecamatan Tigaraksa <span class="subtext">Kabupaten Tangerang</span></h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
-                </a>
+                    <h1 class="m-0 d-flex align-items-center">
+                      <i class="fa fa-map-marker-alt me-2"></i>
+                      <div class="kec" style="text-align: left;"> Kecamatan Tigaraksa<br> <span class="subtext">Kabupaten Tangerang</span></div>
+                    </h1>
+                  </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
                 </button>
