--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -162,7 +162,7 @@
             @media (max-width: 321px){
                 /* NAVBAR */
                 .navbar-brand .fa { 
-                    font-size: 20px !important; 
+                    font-size: 25px !important; 
                     margin-right: 10px !important;
                 }
                 .navbar-brand h1 {
@@ -274,7 +274,7 @@
             @media (min-width: 322px) and (max-width: 380px) {
                 /* NAVBAR */
                 .navbar-brand .fa { 
-                    font-size: 20px !important; /*logo*/
+                    font-size: 25px !important; /*logo*/
                     margin-right: 10px !important;
                 }
                 .navbar-brand h1 {
@@ -411,8 +411,8 @@
 
             @media (min-width: 381px) and (max-width: 427px) {
                 .navbar-brand .fa { 
-                    font-size: 20px !important; /*logo*/
-                    margin-right: 15px !important;
+                    font-size: 25px !important; /*logo*/
+                    margin-right: 10px !important;
                 }
                 .navbar-brand h1 {
                     font-size: 23px !important;
@@ -777,9 +777,10 @@
                 .navbar {
                     height: 180px;
                 }
-                .navbar-brand .m-0.d-flex .fa {
-                    font-size: 40px !important;
-                    border: 2px solid red;
+                .navbar-brand .fa {
+                    padding-right: 15px;
+                    font-size: 50px !important;
+                    /* border: 2px solid red; */
                 }
                 .navbar.navbar-expand-lg.navbar-light {
                     height: 180px !important;
