--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -405,7 +405,11 @@
                    /* border: 2px solid blue; */
                    height: 180px;
                 }
-
+                .navbar-brand .fa {
+                    padding-right: 15px;
+                    font-size: 50px !important;
+                    /* border: 2px solid red; */
+                }
                 .navbar-nav .nav-item {
                     font-size: 30px !important;
                     display: flex;
