--- a/FrontEnd/rute.html
+++ b/FrontEnd/rute.html
@@ -43,20 +43,21 @@
         }
         @media (max-width: 1024px) {
         .leaflet-routing-container {
-            position: fixed;
-            top: auto;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-            max-width: none;
-            margin: 0;
-            z-index: 1000;
-            background: white; /* supaya jelas dan tidak tumpang tindih */
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-            overflow-y: auto;
-            max-height: 200px; /* atau sesuaikan */
+        /* Ganti dari position: fixed ke relative */
+        position: relative;
+        top: auto;
+        bottom: auto;
+        left: auto;
+        right: auto;
+        width: 100%;
+        max-width: none;
+        margin: 0 auto;
+        z-index: 1; /* lebih rendah dari map */
+        background: white;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        padding: 10px;
+        overflow-y: auto;
+        max-height: 200px;
         }
     }
         
